# migrations-tool

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  build.sh  pyproject.toml  test.sh
.github/workflows/: build.yml
src/migrations_tool/: cli.py  migration.py  mysql.py
test/: test_cli.py  test_migration.py
