[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[project]
name = "migrations-tool"
version = "0.1.3"
description = "database migration tool"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=45.0.5",
    "pymysql>=1.1.1",
    "rich>=14.0.0",
    "sqlalchemy>=2.0.41",
    "typer>=0.16.0",
]

[project.scripts]
db-migrate = "migrations_tool.cli:main"

[tool.pyright]
typeCheckingMode = "strict"
include = ["test/**","src/**"]
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    'pytest',
    'ruff',
    'pyright',
    "pre-commit>=4.3.0",
]

[tool.ruff]
include = ["test/**","src/**"]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "S", "C4", "PIE", "RUF"]
ignore = [
    "E501", # Line too long (let formatter handle it)
    "RUF009", # sqlalchemy
]

[tool.ruff.lint.isort]
known-first-party = ["migrations_tool"]

[tool.ruff.lint.per-file-ignores]
"test/**" = ["S101", "S608"]
